footer spacing fixes

--- a/source/css/scss/_settings.scss
+++ b/source/css/scss/_settings.scss
@@ -108,8 +108,8 @@ $body-bg: $kiva-bg-lightgray;
 $body-font-color: $kiva-text-dark;
 $header-font-color: $kiva-text-dark;
 
-$footer-height: rem-calc(460);
-$footer-height-reduction: rem-calc(179);
+$footer-height: rem-calc(424);
+$footer-height-reduction: rem-calc(144);
 
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
