--- a/source/css/scss/app/sitefooter.scss
+++ b/source/css/scss/app/sitefooter.scss
@@ -38,7 +38,7 @@ $footer-top-bottom-padding: rem-calc(40);
 }
 
 .siteFooter-statement-group {
-	margin-bottom: 14%;
+	margin-bottom: 12%;
 }
 
 .siteFooter-links {
@@ -71,6 +71,10 @@ $footer-top-bottom-padding: rem-calc(40);
 }
 
 @media #{$small-only}, #{$medium-only} {
+    .siteFooter {
+        padding: rem-calc(40) 1rem;
+    }
+
 	.siteFooter-nav {
 		.siteFooter-links {
 			border-bottom: white 1px solid;
@@ -106,6 +110,10 @@ $footer-top-bottom-padding: rem-calc(40);
 }
 
 @media #{$medium-only} {
+    .siteFooter {
+        padding: rem-calc(40);
+    }
+
 	.siteFooter-links a {
 		font-size: $body-font-size;
 		line-height: $body-line-height;
@@ -113,6 +121,10 @@ $footer-top-bottom-padding: rem-calc(40);
 }
 
 @media #{$large-up} {
+    .siteFooter {
+        padding: rem-calc(40) 1rem;
+    }
+
 	.siteFooter-nav {
 		height: $footer-height - $footer-top-bottom-padding;
 		position: relative;
@@ -124,12 +136,52 @@ $footer-top-bottom-padding: rem-calc(40);
 
 		.siteFooter-links {
 			margin-bottom: 0;
+
+            &.links-list {
+                li {
+                    display: inline-block;
+                    float: left;
+
+                    &:nth-child(3) {
+                        clear: both;
+
+                        a {
+                            border: none;
+                            padding-left: 0;
+                            margin-left: 0;
+                        }
+                    }
+
+                    &:first-of-type a {
+                        border: none;
+                        padding-left: 0;
+                        margin-left: 0;
+                    }
+                }
+
+                a {
+                    white-space: nowrap;
+                    border-left: $white rem-calc(1) solid;
+                    padding-left: rem-calc(8);
+                    margin-left: rem-calc(8);
+                }
+            }
 		}
 	}
+}
 
-	.siteFooter-divider {
-		border-right: $white 1px solid;
-		padding-right: 10px;
-		margin-right: 8px;
-	}
+@media #{$xxlarge-up} {
+    .siteFooter-statement-group {
+        margin-bottom: 14%;
+    }
+
+    .siteFooter-nav .siteFooter-links.links-list li:nth-child(3) {
+        clear: none;
+
+        a {
+            border-left: $white rem-calc(1) solid;
+            padding-left: rem-calc(8);
+            margin-left: rem-calc(8);
+        }
+    }
 }
